<resources>
    <string name="app_name">Tip Time App</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="service_question">How was the service?</string>
    <string name="option_1">Amazing 20%</string>
    <string name="option_2">Amazing 15%</string>
    <string name="option_3">Amazing 10%</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="calculate">Calculate</string>
    <string name="textview">TextView</string>
    <string name="aer">aer</string>

</resources>