<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/roundUpSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceQuestion">

        <RadioButton
            android:id="@+id/optionTwentyPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <RadioButton
            android:id="@+id/optionEighteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />

        <RadioButton
            android:id="@+id/optionFifteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3" />
    </RadioGroup>

    <EditText
        android:id="@+id/costOfService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/cost_of_service"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/serviceQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/service_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tipOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costOfService" />


    <Switch
        android:id="@+id/roundUpSwitch"
        android:layout_width="176dp"
        android:layout_height="23dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:text="@string/round_up_tip"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipOptions"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:text="@string/calculate"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundUpSwitch" />



    <TextView
        android:id="@+id/tipResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#30D689"
        android:textSize="24sp"
        android:text="@string/tip_amount"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        android:textAlignment="center"
         />

</androidx.constraintlayout.widget.ConstraintLayout>